# pygeofetch

./: .gitignore  CHANGELOG.md  COMMIT_MESSAGE.txt  CONDA_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PYGEOFETCH_SESSION_REPORT.md  QUICKSTART.md  README.md  deploy.md  diagnose_cdse_auth.py  meta.yaml  pygeofetch_documentation.html  pygeofetch_linkedin_announcement.md  pyproject (1).toml  pyproject.toml  pytest.ini  setup.cfg  setup_dev.sh  test_topo.py
.github/workflows/: tests.yml
conda-recipe/: meta.yaml
docs/: architecture.md  contributing.md  faq.md  index.html  index.md  installation.md  mkdocs.yml  quickstart.md
docs/api/: advanced.md  cli.md  cloud.md  datasets.md  edge.md  explainability.md  foundation.md  index.md  inference.md  labeling.md  losses.md  models.md  monitoring.md  pipelines.md  pointcloud.md  pygeovision.md  serving.md  timeseries.md  training.md  vlm.md
docs/assets/: README.md
docs/examples/: agriculture.md  climate.md  disaster.md  forestry.md  index.md  urban.md  water.md
docs/tutorials/: 01_getting_started.ipynb  02_authentication_and_providers.ipynb  03_satellite_data_search.ipynb  04_satellite_data_download.ipynb  05_data_pipeline_orchestration.ipynb  06_building_footprint_extraction.ipynb  07_solar_panel_detection.ipynb  08_water_body_segmentation.ipynb  09_land_cover_classification.ipynb  10_change_detection.ipynb  11_crop_monitoring_agriculture.ipynb  12_forest_vegetation_analysis.ipynb  13_disaster_assessment.ipynb  14_urban_analysis.ipynb  15_custom_model_training.ipynb  16_foundation_models.ipynb  17_vision_language_models.ipynb  18_cloud_masking_super_resolution.ipynb  19_benchmarking_model_evaluation.ipynb  20_end_to_end_pipelines.ipynb  21_advanced_analytics_visualization.ipynb  22_deployment_and_serving.ipynb  authentication.md  building_extraction.md  change_detection.md  custom_training.md  data_download.md  data_search.md  deployment.md  foundation_models.md  getting_started.md  index.md  land_cover.md
notebooks/: 01_getting_started.ipynb  02_authentication_and_providers.ipynb  03_advanced_search (1).ipynb  03_advanced_search.ipynb  04_download_and_postprocessing.ipynb  05_pipelines_and_scheduling.ipynb  06_real_world_workflows.ipynb  07_copernicus_and_authenticated_providers.ipynb  08_cli_complete_reference.ipynb  09_processing_complete.ipynb  10_sar_insar_complete_pipeline (1).ipynb  10_sar_insar_complete_pipeline.ipynb  11_insar_subsidence_monitoring_project.ipynb  12_usgs_landsat_complete_pipeline.ipynb  13_usgs_ghana_deforestation_monitoring new.ipynb  13_usgs_ghana_deforestation_monitoring.ipynb  15_obuasi_vegetation_timeseries_trend (1).ipynb  15_obuasi_vegetation_timeseries_trend.ipynb  16_accra_flood_recession_sar (1).ipynb  16_accra_flood_recession_sar (2).ipynb  16_accra_flood_recession_sar.ipynb  17_accra_gama_flood_government.ipynb  17_accra_gama_flood_government1.ipynb  18_atewa_forest_deforestation_template (1).ipynb  18_atewa_forest_deforestation_template.ipynb  18_atewa_forest_deforestation_template_new.ipynb  19_accra_urban_expansion (1).ipynb  19_accra_urban_expansion.ipynb  21_accra_terrain_flood_susceptibility (1).ipynb  21_accra_terrain_flood_susceptibility (2).ipynb  21_accra_terrain_flood_susceptibility (3).ipynb  21_accra_terrain_flood_susceptibility.ipynb  coordinate_template_wgs84_to_google.csv
paper/: JOSS_SUBMISSION_GUIDE.md  draft-pdf.yml  paper.bib  paper.md
projects/: 01_satellite_data_acquisition.ipynb  02_building_footprint_extraction.ipynb  03_land_cover_classification_prithvi.ipynb  04_change_detection_temporal_analysis.ipynb  05_agricultural_crop_monitoring.ipynb  06_forest_monitoring_deforestation.ipynb  07_water_body_segmentation_flood_mapping.ipynb  08_solar_panel_detection_energy_assessment.ipynb  09_disaster_damage_assessment.ipynb  10_urban_growth_analysis.ipynb  11_road_network_extraction.ipynb  12_crop_type_mapping_timeseries.ipynb  13_glacier_monitoring_climate_change.ipynb  14_oil_spill_detection_sar.ipynb  15_air_quality_monitoring.ipynb  16_wildfire_detection_monitoring.ipynb  17_species_biodiversity_mapping.ipynb  18_infrastructure_monitoring.ipynb  19_coastal_wetland_monitoring.ipynb  20_climate_change_analysis_lst_ndvi.ipynb  21_custom_model_training_auto_labeling.ipynb  22_end_to_end_pipeline_deployment.ipynb  23_foundation_model_fine_tuning.ipynb  24_multitemporal_analysis_dinov3_embeddings.ipynb  25_vision_language_querying_clip_moondream.ipynb  README.md
pygeofetch/: __init__.py  meta.yaml
pygeofetch/cli/: __init__.py  auth_commands.py  config_commands.py  download_commands.py  index_commands.py  main.py  pipeline_process_commands.py  postprocess_commands.py  preprocess_commands.py  sar_commands.py  search_commands.py
pygeofetch/config/: __init__.py  defaults.yaml  settings.py
pygeofetch/core/: __init__.py  authenticator.py  cache_manager.py  downloader.py  engine.py  logging.py  orbits.py  scheduler.py  searcher.py
pygeofetch/insar/: __init__.py  atmosphere.py  extraction.py  interferogram.py  timeseries.py  unwrap.py
pygeofetch/models/: __init__.py  download_task.py  satellite_data.py  search_query.py  user_auth.py
pygeofetch/processing/: __init__.py  base.py  batch.py  indices.py  pipeline.py  postprocessor.py  preprocessor.py  sar.py
pygeofetch/processor/: __init__.py  indices.py  landsat.py  loader.py  stacker.py  timeseries.py
pygeofetch/providers/: __init__.py  airbus_oneatlas.py  alaska_satellite_facility.py  aws_earth.py  base.py  copernicus.py  digitalglobe.py  (+19 more)
pygeovision/: __init__.py
tests/: conftest.py  test_advanced.py  test_benchmark.py  test_core.py  test_data_layer.py  test_datasets.py  test_dinov3.py  test_edge_cloud.py  test_extraction.py  test_foundation_models.py  test_geoai_integration.py  test_inference.py  test_insar.py  test_integration.py  test_labeling.py  test_losses.py  test_model_zoo.py  test_monitoring.py  test_pgv_integration_contract.py  test_pipelines.py  test_prithvi.py  test_training.py  test_training_phase4.py  test_utils_phase8.py  test_validation.py  test_viz_plot.py
(+210 files in other folders)
