[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyGeoFetch"
version = "1.0.0"
description = "Universal satellite data pipeline — unified access to 22+ providers"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "PyGeoFetch Contributors" }]
keywords = ["satellite", "remote-sensing", "GIS", "earth-observation", "geospatial"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "rich>=13.7",
    "PyYAML>=6.0",
    "cryptography>=42.0",
    "keyring>=24.3",
    "aiofiles>=23.2",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
    "tqdm>=4.66",
    "requests>=2.31",
    "anyio>=4.2",
    "boto3>=1.34",
    "click-completion>=0.5",
]

[project.optional-dependencies]
geo = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "pyarrow>=15.0",
    "shapely>=2.0",
    "pyproj>=3.6",
]
cloud = [
    "boto3>=1.34",
    "pystac>=1.9",
]
schedule = [
    "croniter>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-asyncio>=0.23",
    "vcrpy>=6.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "bump2version>=1.0",
]
all = ["PyGeoFetch[geo,cloud,schedule,dev]"]

[project.scripts]
PyGeoFetch = "pygeofetch.cli.main:cli"

[project.urls]
Homepage = "https://github.com/pygeofetch/PyGeoFetch"
Documentation = "https://pygeofetch.readthedocs.io"
Repository = "https://github.com/pygeofetch/PyGeoFetch"
"Bug Tracker" = "https://github.com/pygeofetch/PyGeoFetch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygeofetch*"]

[tool.setuptools.package-data]
pygeofetch = ["config/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
