[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeofetch"
version = "1.2.0"
description = "Universal satellite data pipeline + geospatial processing platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "pygeofetch Contributors", email = "pygeofetch@example.com" }]
keywords = ["satellite", "remote-sensing", "GIS", "earth-observation", "geospatial", "SAR", "Sentinel", "Landsat"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"
dependencies = [
    # Tier 1: Core (always installed)
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6.0",
    "cryptography>=42.0",
    "keyring>=24.3",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
    "requests>=2.31",
    "anyio>=4.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Tier 2: Geospatial core
geo = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "pyarrow>=15.0",
    "shapely>=2.0",
    "pyproj>=3.6",
]

# Tier 3: Data loading & processing
processor = [
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "eoreader>=0.24",
    "spyndex>=0.5",
    "scipy>=1.12",
    "scikit-image>=0.23",
    "geopandas>=0.14",
]

# Tier 4: Additional providers
providers = [
    "eodag>=3.0",
]

# Tier 5: SAR processing (lightweight)
sar = [
    "sarxarray>=0.1",
    "scipy>=1.12",
]

# Tier 5b: SAR processing (heavy — requires SNAP)
ost = [
    "opensartoolkit>=3.0",
]

# Tier 6: Visualization
viz = [
    "leafmap>=0.30",
    "folium>=0.16",
    "matplotlib>=3.7",
]

# Cloud providers
cloud = [
    "boto3>=1.34",
    "pystac>=1.9",
    "planetary-computer>=1.0",
]

# Notebook support
notebook = [
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "jupyter>=1.0",
]

# Scheduling
schedule = [
    "croniter>=2.0",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
]

# Everything
full = [
    "pygeofetch[geo,processor,providers,sar,viz,cloud,notebook,schedule]",
]
# Legacy alias
all = ["pygeofetch[full]"]

[project.scripts]
pygeofetch = "pygeofetch.cli.main:cli"

[project.urls]
Homepage      = "https://github.com/pygeofetch/pygeofetch"
Documentation = "https://pygeofetch.readthedocs.io"
Repository    = "https://github.com/pygeofetch/pygeofetch"
"Bug Tracker" = "https://github.com/pygeofetch/pygeofetch/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["pygeofetch*"]

[tool.setuptools.package-data]
pygeofetch = ["config/*.yaml", "py.typed"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
