[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygeofetch"
version = "1.5.0"
description = "Universal satellite data pipeline + geospatial processing platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Samuel Appiah Kubi", email = "appiahkubis14@gmail.com" },
]
keywords = ["satellite", "remote-sensing", "GIS", "earth-observation", "geospatial", "SAR", "Sentinel", "Landsat"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"
dependencies = [
    # Tier 1: Core (always installed)
    "httpx>=0.27",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6.0",
    "cryptography>=42.0",
    "keyring>=24.3",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
    "requests>=2.31",
    "anyio>=4.2",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Tier 2: Geospatial core
geo = [
    "rasterio>=1.3",
    "geopandas>=0.14",
    "pyarrow>=15.0",
    "shapely>=2.0",
    "pyproj>=3.6",
]

# Tier 3: Data loading & processing
processor = [
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "eoreader>=0.24",
    "spyndex>=0.5",
    "scipy>=1.12",
    "scikit-image>=0.23",
    "geopandas>=0.14",
]

# Tier 4: Additional providers
providers = [
    "eodag>=3.0",
]

# Tier 5: SAR processing (lightweight)
sar = [
    "sarxarray>=0.1",
    "scipy>=1.12",
]

# Tier 5b: SAR processing (heavy — requires SNAP)
ost = [
    "opensartoolkit>=3.0",
]

# Tier 6: Visualization
viz = [
    "leafmap>=0.30",
    "folium>=0.16",
    "matplotlib>=3.7",
    "localtileserver>=1.0.0",
    "ipysheet>=0.6.0",
    "ipyleaflet>=0.17.0",
    "ipywidgets>=8.0.0",
    "ipyevents>=2.0.0",
    "ipyfilechooser>=0.6.0",
    "sidecar>=0.6.0",
    "bokeh>=3.0.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "whitebox>=2.3.0",
    "whiteboxgui>=2.3.0",
    "geemap>=0.28.0",
    "osmnx>=1.7.0",
    "contextily>=1.5.0",
    "xyzservices>=2023.10.0",
    "mapclassify>=2.5.0",
    "geoplot>=0.5.0",
    "mplleaflet>=0.0.5",
    "branca>=0.6.0",
    "plotly-geo>=1.0.0",
    "keplergl>=0.3.0",
    "streamlit>=1.28.0",
]

# Cloud providers
cloud = [
    "boto3>=1.34",
    "pystac>=1.9",
    "planetary-computer>=1.0",
]

# Notebook support
notebook = [
    "ipython>=8.0",
    "ipywidgets>=8.0",
    "jupyter>=1.0",
]

# Scheduling
schedule = [
    "croniter>=2.0",
]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=5.0",
]

insar-full = [
    "snaphu>=0.1",
    "scipy>=1.12",
    "mintpy>=1.5",
    "pyaps3>=0.3",
]

# Everything
full = [
    "pygeofetch[geo,processor,providers,sar,viz,cloud,notebook,schedule]",
]
# Legacy alias
all = ["pygeofetch[full]"]

[project.scripts]
pygeofetch = "pygeofetch.cli.main:cli"

[project.urls]
Homepage      = "https://github.com/pygeofetch/pygeofetch"
Documentation = "https://pygeofetch.readthedocs.io"
Repository    = "https://github.com/pygeofetch/pygeofetch"
"Bug Tracker" = "https://github.com/pygeofetch/pygeofetch/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["pygeofetch*"]

[tool.setuptools.package-data]
pygeofetch = ["config/*.yaml", "py.typed"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version        = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
